# ChatRoom2.0

./: CMakeLists.txt
chatroom/include/: chatItem.h  chatroom.h  privateChatItem.h  publicChatItem.h
chatroom/src/: chatItem.cpp  chatroom.cpp  privateChatItem.cpp  publicChatItem.cpp
client/include/: client.h  clientDialog.h
client/src/: client.cpp  clientDialog.cpp  main.cpp
css/server/: style.css
custom/include/: chatItem.h  clickLabel.h  customLineEdit.h  messageWidget.h  sortedListWidget.h  userWidget.h
custom/src/: chatItem.cpp  clickLabel.cpp  customLineEdit.cpp  messageWidget.cpp  sortedListWidget.cpp  userWidget.cpp
message/handler/client/include/: broadcastUserConnectedMessageHandler.h  broadcastUserDisconnectedMessageHandler.h  chatroomTextMessageReceivedHandler.h  clientMessageHandler.h  configChatMessageHandler.h  errorNickMessageHandler.h
message/handler/client/src/: broadcastUserConnectedMessageHandler.cpp  broadcastUserDisconnectedMessageHandler.cpp  chatroomTextMessageReceivedHandler.cpp  configChatMessageHandler.cpp  errorNickMessageHandler.cpp
message/handler/server/include/: chatroomReadyMessageHandler.h  chatroomTextMessageHandler.h  messageHandler.h  newUserMessageHandler.h  serverMessageHandler.h
message/handler/server/src/: chatroomReadyMessageHandler.cpp  chatroomTextMessageHandler.cpp  newUserMessageHandler.cpp  serverMessageHandler.cpp
message/include/: messageHandler.h
message/parser/include/: messageParser.h
message/parser/src/: messageParser.cpp
message/src/: messageHandler.cpp
message/type/include/: broadcastUserConnectedMessage.h  broadcastUserDisconnectedMessage.h  chatMessage.h  chatroomReadyMessage.h  chatroomTextMessage.h  configChatMessage.h  errorNickMessage.h  message.h  newUserMessage.h
message/type/src/: broadcastUserConnectedMessage.cpp  broadcastUserDisconnectedMessage.cpp  chatMessage.cpp  chatRoomReadyMessage.cpp  chatroomTextMessage.cpp  configChatMessage.cpp  errorNickMessage.cpp  newUserMessage.cpp
server/include/: server.h  serverDialog.h  user.h
server/src/: main.cpp  server.cpp  serverDialog.cpp  user.cpp
thread/include/: receiverThread.h
thread/src/: receiverThread.cpp
